--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,18 @@ code {
 .index{
   text-align: center;
 }
+.btn-group{
+  margin-top: 20px;
+}
+.btn-group .btn{
+  margin-right: 10px;
+}
+.btn-group .btn:last-child{
+  margin-right: 0;
+}
+.btn-group .btn:first-child{
+  margin-left: 0;
+}
+.btn-group .btn:not(:first-child):not(:last-child){
+  border-radius: 0;
+}
