--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,31 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App{
+    width: 100vw;
+    height: 100vh;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.index{
-  text-align: center;
-}
-.btn-group{
-  margin-top: 20px;
-}
-.btn-group .btn{
-  margin-right: 10px;
-}
-.btn-group .btn:last-child{
-  margin-right: 0;
-}
-.btn-group .btn:first-child{
-  margin-left: 0;
-}
-.btn-group .btn:not(:first-child):not(:last-child){
-  border-radius: 0;
+body{
+    margin: 0;
+    padding: 0;
 }
