--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,6 @@ body{
   padding: 0;
 }
 .logout{
-  position: flex;
-  justify-content: end;
-  flex-direction: row-reverse;
+  display: flex;
+  justify-content: flex-end;
 }
