--- a/client/src/components/admin/Admin.css
+++ b/client/src/components/admin/Admin.css
@@ -1,7 +1,15 @@
 .side{
-    height: 100%;
-    width: 250px;
+    height: 600px;
+    width: 230px;
     background-color: grey;
+  }
+
+  .head{
+    height: 60px;
+    background-color: grey;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: white;
   }
   .side-list{
     height: 100%;
@@ -23,3 +31,20 @@
   .row #icon{
     flex: 30%;
   }
+  .logout{
+    display: flex;
+    justify-content: end;
+  }
+.sid-row{
+  height: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  color: black;
+}
+.colum{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
