--- a/client/src/components/admin/Admin.css
+++ b/client/src/components/admin/Admin.css
@@ -67,3 +67,10 @@
   .tr:nth-child(even) {
     background-color: #dddddd;
   }
+
+.formon{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
