--- a/client/src/components/user/User.css
+++ b/client/src/components/user/User.css
@@ -20,3 +20,15 @@
     padding-top: 20px;
     padding-left: 30px;
 }
+.logout{
+    display: flex;
+    justify-content: end;
+  }
+.sid-row{
+    height: 40px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    color: black;
+  }
